[metadata]
name = pytest-bdd
description = BDD for pytest
long_description = file: README.rst, AUTHORS.rst
long_description_content_type = text/x-rst
author = Oleg Pidsadnyi, Anatoly Bubenkov and others
license = MIT license
author_email = oleg.pidsadnyi@gmail.com
url = https://github.com/pytest-dev/pytest-bdd
version = attr: pytest_bdd.__version__
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
install_requires =
    ;Already used in pytest
    attrs

    gherkin-official
    Mako
    marshmallow
    ordered_set
    parse
    parse_type>=0.6.0
    py
    pytest>=5.0
    six>=1.16;python_version~="3.8"
    typing-extensions;python_version<"3.10.0"

tests_require = tox
packages =
    pytest_bdd
    pytest_bdd.model
include_package_data = True

[options.extras_require]
full =
    typing-extensions

[options.entry_points]
pytest11 =
    pytest-bdd = pytest_bdd.plugin
console_scripts =
    pytest-bdd = pytest_bdd.scripts:main
