[metadata]
name = pytest-bdd-ng
description = BDD for pytest
long_description = file: README.rst, AUTHORS.rst
long_description_content_type = text/x-rst
author = Oleg Pidsadnyi, Anatoly Bubenkov and others
license = MIT license
author_email = kostya.goloveshko@gmail.com
url = https://github.com/elchupanebrej/pytest-bdd-ng
version = 1.2.3
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
install_requires =
    ;Already used in pytest
    attrs

    cucumber-expressions
    gherkin-official>=24
    importlib-metadata;python_version<"3.10.0"
    Mako
    marshmallow
    marshmallow-polyfield
    ordered_set
    packaging
    parse
    parse_type>=0.6.0
    py
    pydantic
    pytest>=5.0
    setuptools>=58
    singledispatchmethod;python_version<"3.8.0"
    six>=1.16;python_version~="3.8"
    typing-extensions;python_version<"3.10.0"

tests_require = tox
packages =
    pytest_bdd
    pytest_bdd.model
    pytest_bdd.struct_bdd
    pytest_bdd.typing
include_package_data = True

[options.extras_require]
test =
    execnet
    packaging
    PyHamcrest
    allure-python-commons-test
allure =
    allure-python-commons
    allure-pytest
struct_bdd =
    hjson
    json5
    pyhocon
    tomli
    PyYAML
    types-PyYAML

[options.entry_points]
pytest11 =
    pytest-bdd = pytest_bdd.plugin
console_scripts =
    pytest-bdd = pytest_bdd.scripts:main
