[options]
include_package_data = True
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
[options.package_data]
pytest_bdd.template =
    test.py.mak

[options.extras_require]
test =
    allure-python-commons-test
    execnet
    packaging
    PyHamcrest
    pytest-httpserver
    python-coveralls
    tox
allure =
    allure-python-commons
    allure-pytest
struct_bdd =
    hjson
    json5
    pyhocon
    tomli;python_version<"3.11.0"
    PyYAML
    types-PyYAML
full =
    # test
    allure-python-commons-test
    execnet
    packaging
    PyHamcrest
    pytest-httpserver
    python-coveralls
    tox

    # allure
    allure-python-commons
    allure-pytest

    # struct_bdd
    hjson
    json5
    pyhocon
    tomli;python_version<"3.11.0"
    PyYAML
    types-PyYAML
